not showing in gitBox?

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		
 		<p>some changes for git Coda test</p>
 		<p>Another test gitBox and coda2</p>
+		<p>again, see if gitbox sees this? why doesn't it?</p>
 		
 		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Proin pellentesque, est ut venenatis aliquam, lorem quam porttitor ligula, eget ultrices velit dui sed quam. Praesent vehicula placerat lectus. Nulla pede. Quisque a nulla quis massa pulvinar sagittis. Pellentesque neque massa, mattis vulputate, pellentesque nec, vehicula volutpat, purus. Proin pretium dui et nulla cursus eleifend. Aenean aliquam urna eget urna. Vestibulum euismod elit. Donec eget augue sit amet neque elementum pretium. Proin posuere lacus id lacus. Duis vel justo suscipit neque ornare iaculis.</p>
 		
