coda2 using correct repo now

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 	<div>
 		
+		<h1>This is test for gitBox seeing changes in coda2</h1>
 		<h1>big header</h1>
 		<h2>med header</h2>
 		<h3>small header</h3>
